# SwiftRun

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  app.manifest  build.rs  build_errors.txt  check.out  check_output.txt  errors.txt  resources.rc
src/: animations.rs  config.rs  installer.rs  main.rs  uninstaller.rs
src/data/: history.rs
src/system/: executor.rs  explorer.rs  hotkeys.rs  mod.rs  registry.rs  shortcut.rs
src/ui/: dialog.rs  dropdown.rs  main_win.rs  mod.rs  resources.rs  tooltip.rs
