[package]
name = "swift_run"
version = "0.8.0-beta"
edition = "2024"

[dependencies]
windows-numerics = "0.3.1"


[dependencies.windows]
version = "0.62.2"
features = [

    "Win32_Foundation",
    "Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_System_Registry",
    "Win32_Graphics_Imaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Media",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
]

[[bin]]
name = "swift_run"
path = "src/main.rs"

[[bin]]
name = "swift_run_Install"
path = "src/installer.rs"

[[bin]]
name = "swift_run_Uninstall"
path = "src/uninstaller.rs"

[build-dependencies]
embed-resource = "3.0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
